--- a/ui/Window.ui
+++ b/ui/Window.ui
@@ -75,6 +75,7 @@
      <string>File</string>
     </property>
     <addaction name="Menu_Open"/>
+    <addaction name="Menu_Save"/>
     <addaction name="Menu_Exit"/>
    </widget>
    <addaction name="Menu_File"/>
@@ -93,6 +94,14 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+O</string>
+   </property>
+  </action>
+  <action name="Menu_Save">
+   <property name="text">
+    <string>Save</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+S</string>
    </property>
   </action>
  </widget>
