+ Added table item data wrapper.

--- a/ui/DocumentWindow.ui
+++ b/ui/DocumentWindow.ui
@@ -69,6 +69,12 @@
         <height>0</height>
        </size>
       </property>
+      <property name="selectionMode">
+       <enum>QAbstractItemView::SingleSelection</enum>
+      </property>
+      <property name="selectionBehavior">
+       <enum>QAbstractItemView::SelectRows</enum>
+      </property>
       <attribute name="horizontalHeaderDefaultSectionSize">
        <number>115</number>
       </attribute>
