+ Added edit menu and showing it on tree item right click.

--- a/ui/DocumentWindow.ui
+++ b/ui/DocumentWindow.ui
@@ -47,6 +47,9 @@
         <height>0</height>
        </size>
       </property>
+      <property name="contextMenuPolicy">
+       <enum>Qt::CustomContextMenu</enum>
+      </property>
       <attribute name="headerVisible">
        <bool>false</bool>
       </attribute>
