--- a/ui/Window.ui
+++ b/ui/Window.ui
@@ -64,6 +64,7 @@
     <addaction name="Menu_New"/>
     <addaction name="separator"/>
     <addaction name="Menu_Open"/>
+    <addaction name="Menu_Reload"/>
     <addaction name="separator"/>
     <addaction name="Menu_Save"/>
     <addaction name="Menu_SaveAs"/>
@@ -237,6 +238,14 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+V</string>
+   </property>
+  </action>
+  <action name="Menu_Reload">
+   <property name="text">
+    <string>&amp;Reload</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Shift+O</string>
    </property>
   </action>
  </widget>
