--- a/ui/DocumentWindow.ui
+++ b/ui/DocumentWindow.ui
@@ -62,12 +62,6 @@
          <property name="enabled">
           <bool>true</bool>
          </property>
-         <property name="minimumSize">
-          <size>
-           <width>250</width>
-           <height>0</height>
-          </size>
-         </property>
          <property name="contextMenuPolicy">
           <enum>Qt::CustomContextMenu</enum>
          </property>
@@ -107,6 +101,9 @@
           </property>
           <item>
            <widget class="QLineEdit" name="TreeSearch">
+            <property name="placeholderText">
+             <string>Search...</string>
+            </property>
             <property name="clearButtonEnabled">
              <bool>true</bool>
             </property>
@@ -123,12 +120,6 @@
         <horstretch>1</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
-      </property>
-      <property name="minimumSize">
-       <size>
-        <width>250</width>
-        <height>0</height>
-       </size>
       </property>
       <property name="selectionMode">
        <enum>QAbstractItemView::SingleSelection</enum>
@@ -191,14 +182,7 @@
         <number>0</number>
        </property>
        <item>
-        <widget class="QTextEdit" name="TextEdit">
-         <property name="minimumSize">
-          <size>
-           <width>250</width>
-           <height>0</height>
-          </size>
-         </property>
-        </widget>
+        <widget class="QTextEdit" name="TextEdit"/>
        </item>
        <item>
         <widget class="QFrame" name="TextFrameControls">
